@@ -1,0 +1,32 @@
+﻿; Player/Missile Graphics
+; Demo program for ATALAN programming language
+;(c) 2010 Rudla Kudla
+
+use atari
+
+const smiley:array =
+	%00000000
+	%00111100
+	%01000010
+	%10000001
+	%10100101
+	%10000001
+	%10000001
+	%10000001
+	%10100101
+	%10011001
+	%10000001
+	%01000010
+	%00111100
+	%00000000	 
+
+;This is minimal initialization code for PMG
+init'pmgbase
+DMACTL = playfield + dl + players + missiles + hires_sprites
+GRACTL = players + missiles
+
+;Set the player 0 properties and define it's shape 
+player(0).scolor = Medium'green
+player(0).x = 100
+player(0).bitmap(50) = smiley
+
