@@ -89,7 +89,7 @@ int main(int argc, char *argv[])
     // Check arguments.
     //
 
-	printf("Atalan programming language compiler (4-Nov-2010)\nby Rudla Kudla (http:\\atalan.kutululu.org)\n\n");
+	printf("Atalan programming language compiler (3-Jan-2011)\nby Rudla Kudla (http:\\atalan.kutululu.org)\n\n");
 
 	i = 1;
 	while (i < argc) {		
@@ -316,7 +316,7 @@ int main(int argc, char *argv[])
 	}
 
 done:	
-   	exit(result);
+	   	exit(result);
 
 failure:
 	result = -2;
